<resources>
    <string name="app_name">ShareoMatic</string>

    <string name="welcome_to_share_o_matic">Welcome to Share-O-Matic</string>
    <string name="enter_your_mobile_number_to_proceed">Enter your mobile number to proceed</string>



    <string name="i_have_read_privacy_policy">I have read privacy policy</string>
    <string name="i_have_read_terms_and_conditions">I have read Terms and Conditions</string>
    <string name="terms_amp_condition"><![CDATA[Terms & condition]]></string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="number_verification">Number Verification</string>

    <string name="select_date">Select Date</string>
    <string name="beauty">Beauty</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="_000000">000000</string>
    <string name="weave_details">Weave Details</string>
    <string name="sign_in">Sign in</string>
    <string name="referral_code">Referral Code</string>
    <string name="by_signing_in_you_accept">By signing in, you accept</string>
    <string name="otp_sent_to">OTP sent to:</string>
    <string name="_00_00">00:00</string>


    <string name="and">and</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="full_name">Full Name*</string>
    <string name="please_set_your_profile_picture_and_name">Please set your profile picture and name</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_otp_in">Send otp in</string>


</resources>