<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/loginHintTv1"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/loginHintTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/welcome_to_share_o_matic"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/loginHintTvSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/enter_your_mobile_number_to_proceed"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_otp">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCode"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="50dp"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:visibility="visible"
                    app:ccpDialog_backgroundColor="?attr/backgroundColor"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showArrow="false"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textColor="@color/black"
                    app:ccp_textSize="17dp"
                    tools:ignore="RtlSymmetry" />


                <EditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textSize="17sp"
                    android:visibility="visible"
                    tools:ignore="NotSibling,TextFields" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCodeConfirm"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:paddingHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorTab"
                android:fontFamily="@font/poppins_semibold"
                android:text="Send OTP"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:elevation="@dimen/_5sdp"
                app:cornerRadius="@dimen/_5sdp"
                app:rippleColor="@color/colorPrimary" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>